--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,66 +1,24 @@
 @import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
+@import url('https://fonts.googleapis.com/css?family=Megrim');
 @import "reset";
 
-body {
-  font-family: 'Roboto', sans-serif;
-  // background: purple;
+$white: #fff;
+$darkBlue: #3A4793;
+$lightBlue: #25B3EC;
+$lightPurple: #9787EE;
+$yellow: #FF8F3E;
+
+*, h1, h2, h3, h4, h5, h6, p, span, div{
+  box-sizing: border-box;
+  color: $white;
+  font-family: sans-serif;
 }
 
-h1 {
-  font-weight: 100;
-  font-size: 50px;
+html, body {
+  background: #EDEDED;
+  height:100%;
+  overflow: hidden;
 }
 
-.home {
-  height: 100%;
-  width: 100%;
-  text-align: center;
-
-  img {
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-  }
-
-  .Aligner {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .Aligner-item {
-    max-width: 50%;
-  }
-
-  .menu {
-    ul {
-      li {
-        padding: 10px 15px;
-        display: inline-block;
-        font-family: 'Roboto', sans-serif;
-        font-size: 18px;
-        font-weight: 500;
-      }
-    }
-  }
-
-  .version-num {
-    background: #E8E8E8;
-    border-radius: 4px;
-    padding: 7px 15px;
-    display: inline-block;
-    font-size: 12px;
-    margin: 10px 0 20px;
-  }
-
-  a {
-    text-decoration: none;
-    color: #30395C;
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      color: #43D4D6;
-    }
-  }
-}
+@import "home.scss";
+@import "all-tasks.scss";
